test/test-cases/negative/id_errors.pas
Program id_errors(input, output);
Const
  b = 1;

Var
  // 重复定义
  a, x, x, y: integer;
  // 重复定义
  a: integer;
Begin
  // 运算对象缺失
  x := 3 +;
  // 未定义标识符
  read(r, y)
End.
